# play_kernel

./: .clang-format  .clangd  .gitignore  README.md
kernels/cuda/allreduce/: CMakeLists.txt  README.md  ar.py  build.sh  cuda_wrapper.py  test_ar.py
kernels/cuda/allreduce/src/: ar.cu  ar.cuh
kernels/cuda/custom_op/: CMakeLists.txt  ar.py  profile.sh  test_ar.py  test_ar_graph.py  test_rs_fused.py
kernels/cuda/custom_op/src/: custom_all_reduce.cu  custom_all_reduce.cuh
kernels/cuda/flash/: algo.md
kernels/cuda/medium/reduce/: reduce.cu  reduce.py
kernels/cuda/medium/sigmoid/: sigmoid.cu  sigmoid1.cu  sigmoid1.py
kernels/cuda/medium/softmax/: softmax.cu  softmax.py
kernels/triton/: 0-my_mm.ipynb  1.vec_add.ipynb  2.softmax.ipynb  3.matrix_multi.ipynb  4.dropout.ipynb  5.layernorm.ipynb  6.fused_attn.ipynb  9.mat-mul.ipynb  matmul.hatchet  mm.py  mm1.py  softmax.py
note/: lru.py  mm.py
toy-lang/: CMakeLists.txt  ast.h
toy-lang/src/: ast.h  codegen.cc  lang.cc  lexer.h
